// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render CategoriesSelect correctly with selected category 1`] = `
<div>
  <StateManager
    className="react-select"
    defaultInputValue=""
    defaultMenuIsOpen={false}
    defaultValue={null}
    isClearable={true}
    onChange={[Function]}
    options={
      Array [
        Object {
          "id": "1",
          "label": "Food",
          "value": "food",
        },
        Object {
          "id": "2",
          "label": "Clothes",
          "value": "clothes",
        },
        Object {
          "id": "3",
          "label": "House utilities",
          "value": "house-utilities",
        },
        Object {
          "id": "4",
          "label": "Bills",
          "value": "bills",
        },
      ]
    }
    placeholder="Select category..."
  />
</div>
`;

exports[`should render CategoriesSelect correctly without selected category 1`] = `
<div>
  <StateManager
    className="react-select"
    defaultInputValue=""
    defaultMenuIsOpen={false}
    defaultValue={null}
    isClearable={true}
    onChange={[Function]}
    options={
      Array [
        Object {
          "id": "1",
          "label": "Food",
          "value": "food",
        },
        Object {
          "id": "2",
          "label": "Clothes",
          "value": "clothes",
        },
        Object {
          "id": "3",
          "label": "House utilities",
          "value": "house-utilities",
        },
        Object {
          "id": "4",
          "label": "Bills",
          "value": "bills",
        },
      ]
    }
    placeholder="Select category..."
    value=""
  />
</div>
`;
